pizza order page test cases automated, test cases and defects are logged

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,19 +1,5 @@
 browser=chrome
 platform=windows
 url=http://localhost:63342/SQEDemoChallengeUI/com.sample/src/test/resources/files/index.html?_ijt=db8fpcp50hir4qoqt6bho54glj&_ij_reload=RELOAD_ON_SAVE
-name=user1
-phone=123456789
-email=user1@gmail.com
-paymentModeByCreditCard=Credit Card
-paymentModeByCashOnPickup=Cash
-twoToppingsPizza=MEDIUM_TWOTOPPINGS
-noToppingsPizza=SMALL_NOTOPPINGS
-oneToppingPizza=SMALL_ONETOPPINGS
-toppings1=olives
-toppings2=mushrooms
-negativeQuantity=-500
-quantity=3
-maximumQuantity=99999
-veryLargeQuantityValue=9999999
-invalidPhoneNumber=abcd#^%123
-invalidEmail=28292test1demo#:)
+chromeDriverWindowsOSPath=src/test/resources/chromedriver/windows/chromedriver.exe
+chromeDriverMacOSPath=src/test/resources/chromedriver/mac/chromedriver
