--- a/pom.xml
+++ b/pom.xml
@@ -18,26 +18,23 @@
                 </configuration>
             </plugin>
             <plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M3</version>
-				<configuration>
-					<parallel>classes</parallel>
-					<threadCount>${testng.thread.count}</threadCount>
-					<suiteXmlFiles>
-						<suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
-					</suiteXmlFiles>
-				</configuration>
-				
-			</plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M3</version>
+                <configuration>
+                    <parallel>classes</parallel>
+                    <threadCount>3</threadCount>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                </configuration>
+
+            </plugin>
         </plugins>
     </build>
 
 
     <dependencies>
-
-       
-
         <!--TestNG-->
         <dependency>
             <groupId>org.testng</groupId>
@@ -56,6 +53,7 @@
             <artifactId>selenium-server</artifactId>
             <version>3.141.59</version>
         </dependency>
+
         <!--Maven-->
         <dependency>
             <groupId>org.apache.maven.plugins</groupId>
@@ -79,6 +77,11 @@
             <artifactId>extentreports</artifactId>
             <version>2.41.2</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.googlecode.json-simple</groupId>
+            <artifactId>json-simple</artifactId>
+            <version>1.1.1</version>
         </dependency>
     </dependencies>
 
