implementing the changes suggested

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,5 +1,5 @@
 browser=chrome
 platform=windows
-url=http://localhost:63342/SQEDemoChallengeUI/com.sample/src/test/resources/files/index.html?_ijt=db8fpcp50hir4qoqt6bho54glj&_ij_reload=RELOAD_ON_SAVE
+url=http://localhost:63342/PizzaOrderService/files/index.html?_ijt=g8fatfcqgtqdfjpsvvhldigdem&_ij_reload=RELOAD_ON_SAVE
 chromeDriverWindowsOSPath=src/test/resources/chromedriver/windows/chromedriver.exe
 chromeDriverMacOSPath=src/test/resources/chromedriver/mac/chromedriver
